--- a/en-activities.html
+++ b/en-activities.html
@@ -245,11 +245,11 @@
             <a href="es-activities.html"><img src="./images/wflags_svg/es.svg" class="flag-icon"> Español</a>
             <a href="fr-activities.html"><img src="./images/wflags_svg/fr.svg" class="flag-icon"> Français</a>
             <a href="it-activities.html"><img src="./images/wflags_svg/it.svg" class="flag-icon"> Italiano</a>
-            <a href="ru-activities.html"><img src="./images/wflags_svg/ru.svg" class="flag-icon"> Русский</a>
+            <!-- <a href="ru-activities.html"><img src="./images/wflags_svg/ru.svg" class="flag-icon"> Русский</a>
             <a href="cn-activities.html"><img src="./images/wflags_svg/cn.svg" class="flag-icon"> 中文</a>
             <a href="jp-activities.html"><img src="./images/wflags_svg/jp.svg" class="flag-icon"> 日本語</a>
             <a href="kr-activities.html"><img src="./images/wflags_svg/kr.svg" class="flag-icon"> 한국어</a>
-            <a href="ar-activities.html"><img src="./images/wflags_svg/Arab_League.svg" class="flag-icon"> العربية</a>
+            <a href="ar-activities.html"><img src="./images/wflags_svg/Arab_League.svg" class="flag-icon"> العربية</a> -->
           </div>
 
           <!-- 可选国旗图标 -->
