--- a/en-resume.html
+++ b/en-resume.html
@@ -213,11 +213,11 @@
             <a href="es.html"><img src="./images/wflags_svg/es.svg" class="flag-icon"> Español</a>
             <a href="fr.html"><img src="./images/wflags_svg/fr.svg" class="flag-icon"> Français</a>
             <a href="it.html"><img src="./images/wflags_svg/it.svg" class="flag-icon"> Italiano</a>
-            <a href="ru.html"><img src="./images/wflags_svg/ru.svg" class="flag-icon"> Русский</a>
+            <!-- <a href="ru.html"><img src="./images/wflags_svg/ru.svg" class="flag-icon"> Русский</a>
             <a href="cn.html"><img src="./images/wflags_svg/cn.svg" class="flag-icon"> 中文</a>
             <a href="jp.html"><img src="./images/wflags_svg/jp.svg" class="flag-icon"> 日本語</a>
             <a href="kr.html"><img src="./images/wflags_svg/kr.svg" class="flag-icon"> 한국어</a>
-            <a href="ar.html"><img src="./images/wflags_svg/Arab_League.svg" class="flag-icon"> العربية</a>
+            <a href="ar.html"><img src="./images/wflags_svg/Arab_League.svg" class="flag-icon"> العربية</a> -->
           </div>
 
           <!-- 可选国旗图标 -->
