--- a/en-contact.html
+++ b/en-contact.html
@@ -199,11 +199,11 @@
             <a href="es-contact.html"><img src="./images/wflags_svg/es.svg" class="flag-icon"> Español</a>
             <a href="fr-contact.html"><img src="./images/wflags_svg/fr.svg" class="flag-icon"> Français</a>
             <a href="it-contact.html"><img src="./images/wflags_svg/it.svg" class="flag-icon"> Italiano</a>
-            <a href="ru-contact.html"><img src="./images/wflags_svg/ru.svg" class="flag-icon"> Русский</a>
+            <!-- <a href="ru-contact.html"><img src="./images/wflags_svg/ru.svg" class="flag-icon"> Русский</a>
             <a href="cn-contact.html"><img src="./images/wflags_svg/cn.svg" class="flag-icon"> 中文</a>
             <a href="jp-contact.html"><img src="./images/wflags_svg/jp.svg" class="flag-icon"> 日本語</a>
             <a href="kr-contact.html"><img src="./images/wflags_svg/kr.svg" class="flag-icon"> 한국어</a>
-            <a href="ar-contact.html"><img src="./images/wflags_svg/Arab_League.svg" class="flag-icon"> العربية</a>
+            <a href="ar-contact.html"><img src="./images/wflags_svg/Arab_League.svg" class="flag-icon"> العربية</a> -->
           </div>
 
           <!-- 可选国旗图标 -->
