--- a/cn-resume.html
+++ b/cn-resume.html
@@ -606,10 +606,12 @@
 
         <a href="cn-resume.html" class="active">
 
-          <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text></rt></ruby>
-            <ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby> <small><ruby>博 士<rt>科学 / Dr.</rt>
-              </ruby></small>
-          </h3>
+          <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text>
+          </rt></ruby>&nbsp;<ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby>
+      <small><ruby>博 士<rt>科学 /
+                  Dr.</rt>
+          </ruby></small>
+           </h3>
         </a>
 
         <div id="myLinks">
@@ -679,22 +681,20 @@
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
         <text style="color:rgb(237, 118, 7);font-size:15px;">➔ 简历 </text>
-        <span style="float:right; font-family:verdana">
-          <select id="languages" name="languages"
-            style="width:110px;display:inline-block;color:inherit;margin-bottom:0px;" onchange="handleLanguageChange(this)">
-            <option value="simplified" select>🇨🇳 中文(简体)</option>
-            <option value="traditional">🇭🇰 中文(繁体)</option>
-            <option value="jp-resume.html">🇯🇵 日本語</option>
-            <option value="kr-resume.html">🇰🇷 한국어</option>
-            <option value="de-resume.html">🇩🇪 Deutsch</option>
-            <option value="en-resume.html">🇬🇧 English</option>
-            <option value="es-resume.html">🇪🇸 Español</option>
-            <option value="fr-resume.html">🇫🇷 Français</option>
-            <option value="it-resume.html">🇮🇹 Italiano</option>
-            <option value="ru-resume.html">🇷🇺 Русский</option>
-            <option value="ar-resume.html">🇸🇦 اللغة العربية</option>
-          </select>
+        <span style="float:right;">
+          <span style="float:right;font-family:verdana">
+            <select id="content-select" name="content-select"
+              style="width: 90px;color:inherit;display:inline-block;margin-bottom:0px;"
+              onchange="window.location.href=this.options [this.selectedIndex].value">
+              <option value="cn-resume.html#education" select>教育背景</option>
+              <option value="cn-resume.html#academic-services">学术职能</option>
+              <option value="cn-resume.html#exhibitions">工业展</option>
+              <option value="cn-resume.html#training">专业培训</option>
+              <option value="cn-resume.html#awards">荣誉奖励</option>
+            </select>
+          </span>
         </span>
+      
       </p>
       <div>
 
