--- a/cn.html
+++ b/cn.html
@@ -253,7 +253,7 @@
     <div>
       <a class='slide'>
         <!-- 点击文字展开菜单 -->
-        <span id="language-button" class='element' style="cursor:pointer;">Zh<span style="color:transparent;">▾&nbsp;&nbsp;</span></span>
+        <span id="language-button" class='element' style="cursor:pointer;">Zh<span style="color:transparent;">▾</span></span>
         <!-- 下拉菜单 -->
         <div id="language-menu" class="language-menu hidden">
           <a href="#" onclick="setSimplified()" ><img src="./images/wflags_svg/cn.svg" class="flag-icon"> 中文(简体)</a>
@@ -449,6 +449,14 @@
         menu.classList.add("hidden");
       });
       </script>
+
+    <!-- Home -->
+    <div>
+      <a class='slide' href='cn.html'>
+        <span class='element'>H</span>
+        <span class='name'>Hong<br>泓</span>
+      </a>
+    </div>
 
     <!-- Research -->
     <div>
