--- a/en-resume.html
+++ b/en-resume.html
@@ -309,6 +309,14 @@
         });
         </script>
         
+    <!-- Home -->
+    <div>
+      <a class='slide' href='en.html'>
+        <span class='element'>H</span>
+        <span class='name'>Hong</span>
+      </a>
+    </div>
+
       <div>
         <a class='slide' href='en-research.html'>
           <span class='element'>Re</span>
