--- a/en.html
+++ b/en.html
@@ -365,7 +365,13 @@
         });
         </script>
 
-
+    <!-- Home -->
+    <div>
+      <a class='slide' href='en.html'>
+        <span class='element'>H</span>
+        <span class='name'>Hong</span>
+      </a>
+    </div>
 
       <div>
         <a class='slide' href='en-research.html'>
