--- a/cn-resume.html
+++ b/cn-resume.html
@@ -259,7 +259,8 @@
       <span id="language-button" class='element' style="cursor:pointer;">Zh<span style="color:transparent;">▾</span></span>
       <!-- 下拉菜单 -->
       <div id="language-menu" class="language-menu hidden">
-        <a href="cn-resume.html"><img src="./images/wflags_svg/cn.svg" class="flag-icon"> 中文</a>
+        <a href="#" onclick="setSimplified()" ><img src="./images/wflags_svg/cn.svg" class="flag-icon"> 中文(简体)</a>
+        <a href="#" onclick="setTraditional()"><img src="./images/wflags_svg/hk.svg" class="flag-icon"> 中文(繁体)</a>
         <a href="jp-resume.html"><img src="./images/wflags_svg/jp.svg" class="flag-icon"> 日本語</a>
         <a href="kr-resume.html"><img src="./images/wflags_svg/kr.svg" class="flag-icon"> 한국어</a>
         <a href="en-resume.html"><img src="./images/flag_uk.png" style="height:17px" class="flag-icon"> English</a>
