--- a/cn-contact.html
+++ b/cn-contact.html
@@ -277,7 +277,7 @@
 
       <!-- 可选国旗图标 -->
       <span class='name'>
-        <img id="flag-button" src="./images/wflags_svg/cn.svg" style="width:23px !important; height:20px !important; position:relative; top:-8px; left:11px; cursor:pointer; object-fit:fill;">
+        <img id="flag-button" id="country-flag-local-storage" src="./images/wflags_svg/cn.svg" style="width:23px !important; height:20px !important; position:relative; top:-8px; left:11px; cursor:pointer; object-fit:fill;">
       </span>
   </div>
 
