--- a/cn-contact.html
+++ b/cn-contact.html
@@ -277,7 +277,7 @@
 
       <!-- 可选国旗图标 -->
       <span class='name'>
-        <img id="flag-button" id="flag-button-lange" src="./images/wflags_svg/cn.svg" style="width:23px !important; height:20px !important; position:relative; top:-8px; left:11px; cursor:pointer; object-fit:fill;">
+        <img id="flag-button-lange" src="./images/wflags_svg/cn.svg" style="width:23px !important; height:20px !important; position:relative; top:-8px; left:11px; cursor:pointer; object-fit:fill;">
       </span>
     </a>
   </div>
@@ -345,7 +345,7 @@
     
     <script>
     const button = document.getElementById("language-button");
-    const flagButton = document.getElementById("flag-button");
+    const flagButton = document.getElementById("flag-button-lange");
     const menu = document.getElementById("language-menu");
     
     // 为En文字添加点击事件
