--- a/cn-activities.html
+++ b/cn-activities.html
@@ -56,7 +56,7 @@
     ga('send', 'pageview');
   </script>
   -->
-
+  <script src="js/language_cn.js"></script>
 
   <style>
     .video-container {
@@ -423,7 +423,7 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <script src="js/language_cn.js"></script>
+
 
 </head>
 
@@ -555,8 +555,14 @@
         <span style="float:right; font-family:verdana">
           <span style="display:inline-block;margin-top:13px;margin-bottom:0px;font-size:small" for="languages">
             <a href="#" onclick="setSimplified()" class="d-inline-block p-3"><img src="./images/wflags_svg/cn.svg" alt="flag"
-              style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;">&nbsp;简</a> / <a href="#" onclick="setTraditional()" class="d-inline-block p-3"><img src="./images/wflags_svg/hk.svg" alt="flag"
-              style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;">
+              style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;"><img id="simplifed-language-flag"
+              style="height:15px; width:24px; display:none; position:relative; top:3px; object-fit: cover; margin-left:5px; margin-right:0px;"
+              alt="flag">&nbsp;简</a> / <a href="#" onclick="setTraditional()" class="d-inline-block p-3"><img src="./images/wflags_svg/hk.svg" alt="flag"
+              style="height:15px; width:24px; display:inline-block; position:relative; top:3px; object-fit: cover;"><img id="traditional-add-language-flag"
+              style="height:15px; width:24px; display:none; position:relative; top:3px; object-fit:cover; margin-left:5px;"
+              alt="flag"><img id="traditional-language-flag"
+              style="height:15px; width:24px; display:none; position:relative; top:3px; object-fit: cover;left: 5px;"
+              alt="flag">
               &nbsp;繁</a></span>&nbsp;<select id="languages" name="languages"
               style="width: 57px;display:inline-block;color:inherit;margin-bottom:0px;"
               onchange="window.location.href=this.options [this.selectedIndex].value">
