--- a/en-activities.html
+++ b/en-activities.html
@@ -340,6 +340,8 @@
         document.addEventListener("click", () => {
           menu.classList.add("hidden");
         });
+        
+        document.addEventListener('DOMContentLoaded', displayCountryName);
         </script>
 
       <!-- 保持原有样式，只按内容宽度比例分配 -->
