--- a/en-resume.html
+++ b/en-resume.html
@@ -1075,6 +1075,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       document.getElementById('date-display').innerHTML = getCurrentDateFormatted('en-US');
+      displayCountryName();
     });
 
     function getCurrentDateFormatted(locale) {
