--- a/es-research.html
+++ b/es-research.html
@@ -182,8 +182,8 @@
     </div>
     <div>
       <a class='slide' href='es-research.html'>
-        <span class='element'>In</span>
-        <span class='name'>Investigación</span>
+        <span class='element'>Ce</span>
+        <span class='name'>Ciencia</span>
       </a>
     </div>
     <!-- <div>
