--- a/it-resume.html
+++ b/it-resume.html
@@ -240,7 +240,7 @@
     
             <!-- 可选国旗图标 -->
             <span class='name'>
-              <img id="flag-button" src="./images/wflags_svg/It.svg" style="width:23px !important; height:20px !important; position:relative; top:-11px; left:11px; cursor:pointer; object-fit:fill;">
+              <img id="flag-button" src="./images/wflags_svg/it.svg" style="width:23px !important; height:20px !important; position:relative; top:-11px; left:11px; cursor:pointer; object-fit:fill;">
             </span>
         </div>
     
