--- a/cn-resume.html
+++ b/cn-resume.html
@@ -400,17 +400,30 @@
     }
 
     async function displayCountryName() {
-      const countries = await fetchCountries();
-      const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
-      const data = await response.json();
-      const countryCode = data.country;
-      const language = 'chinese'; // 更改为您想要显示的语言
-      const countryName = getCountryNameByCode(countries, countryCode, language);
-      document.getElementById("location").textContent = countryName;
-      document.getElementById("location2").textContent = countryName;
+      try {
+        const countries = await fetchCountries();
+        const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
+        const data = await response.json();
+        const countryCode = data.country;
+        const language = 'chinese'; // 更改为您想要显示的语言
+        const countryName = getCountryNameByCode(countries, countryCode, language);
+        
+        // 检查元素是否存在
+        const locationElement = document.getElementById("location");
+        const location2Element = document.getElementById("location2");
+        
+        if (locationElement) {
+          locationElement.textContent = countryName;
+        }
+        if (location2Element) {
+          location2Element.textContent = countryName;
+        }
+      } catch (error) {
+        console.log('Error in displayCountryName:', error);
+      }
     }
 
-    document.addEventListener('DOMContentLoaded', displayCountryName);
+    // document.addEventListener('DOMContentLoaded', displayCountryName);
   </script>
 
 </head>
@@ -1126,47 +1139,7 @@
     </script>
 
 
-    <script>
-      let slideIndex = 1;
-      showSlides(slideIndex);
 
-      // Auto transition the slides every 1.5 seconds
-      let slideInterval = setInterval(() => {
-        plusSlides(1);
-      }, 3500);
-
-      function plusSlides(n) {
-        clearInterval(slideInterval);
-        showSlides(slideIndex += n);
-        slideInterval = setInterval(() => {
-          plusSlides(1);
-        }, 3500);
-      }
-
-      function currentSlide(n) {
-        clearInterval(slideInterval);
-        showSlides(slideIndex = n);
-        slideInterval = setInterval(() => {
-          plusSlides(1);
-        }, 3500);
-      }
-
-      function showSlides(n) {
-        let i;
-        let slides = document.getElementsByClassName("mySlides");
-        let dots = document.getElementsByClassName("dot");
-        if (n > slides.length) { slideIndex = 1; }
-        if (n < 1) { slideIndex = slides.length; }
-        for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";
-        }
-        for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(" active", "");
-        }
-        slides[slideIndex - 1].style.display = "block";
-        dots[slideIndex - 1].className += " active";
-      }
-    </script>
 
     <script>
       function loadScript(scriptUrl, scriptId) {
@@ -1229,11 +1202,6 @@
     <script type="text/javascript" src="/js/block_save_as.js"></script>
 
 
-    <script type="text/javascript" src="/js/scholar_fetch.js"></script>
-
-
-
-    <script type="text/javascript" src="/js/cn_holiday_display.js"></script>
     <script type="text/javascript" src="update_info_script.js"></script>
 
     <!-- End Document
