--- a/cn-resume.html
+++ b/cn-resume.html
@@ -382,7 +382,7 @@
 <!-- 60px 替换为你的导航实际高度 -->
 
 
-  <script type="module">
+  <!-- <script type="module">
     async function fetchCountries() {
       const response = await fetch('/js/countries.json');
       const countries = await response.json();
@@ -424,7 +424,7 @@
     }
 
     // document.addEventListener('DOMContentLoaded', displayCountryName);
-  </script>
+  </script> -->
 
 </head>
 
