--- a/kr.html
+++ b/kr.html
@@ -1092,6 +1092,7 @@
     };
   </script>
   <script type="text/javascript" src="update_info_script.js"></script>
+  <script type="text/javascript" src="block_save_as.js"></script>
 
   <!-- End Document
 ================================================== -->
