--- a/jp-contact.html
+++ b/jp-contact.html
@@ -134,38 +134,7 @@
     }
   </style>
 
-  <script type="module">
-    async function fetchCountries() {
-      const response = await fetch('/js/countries.json');
-      const countries = await response.json();
-      return countries;
-    }
 
-    function getCountryNameByCode(countries, code, language = 'english') {
-      const country = countries.find(country => country.abbr === code);
-
-      if (country) {
-        return country[language] || country.english;
-      } else {
-        return '地球';
-      }
-    }
-
-    async function displayCountryName() {
-      const countries = await fetchCountries();
-      const response = await fetch('https://ipinfo.io/json?token=228a7bb192c4fc');
-      const data = await response.json();
-      const countryCode = data.country.toLowerCase();
-      const language = 'japanese'; // 更改为您想要显示的语言
-      const countryName = getCountryNameByCode(countries, countryCode.toUpperCase(), language);
-      document.getElementById("location2").textContent = countryName;
-      document.getElementById("location").textContent = countryName;
-      document.getElementById("country-flag").src = `./images/wflags/${countryCode}.png`;
-      document.getElementById("country-flag").alt = countryName;
-    }
-
-    document.addEventListener('DOMContentLoaded', displayCountryName);
-  </script>
 
   <!-- block save as
       ================================================== -->
@@ -910,6 +879,7 @@
       };
     </script>
     <script type="text/javascript" src="update_info_script.js"></script>
+    <script type="text/javascript" src="block_save_as.js"></script>
 
     <!-- End Document
 ================================================== -->
