--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
 
 
+  <!-- 设备优化器 - 优先加载 -->
+  <script src="js/device-optimizer.js"></script>
+  
   <script>
     // 设备信息收集和缓存功能
     function collectDeviceInfo() {
