--- a/ru.html
+++ b/ru.html
@@ -30,6 +30,10 @@
   <link rel="stylesheet" href="stylesheets/type.css">
   <link rel="stylesheet" href="stylesheets/slider.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+  <!-- 设备优化器 - 优先加载 -->
+  <!-- <script src="js/device-optimizer.js"></script> -->
+  
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -235,7 +239,7 @@
 
     <style>        
       nav .slide .name {
-      font-size: 0.8em; /* 根据需要调整 */
+      font-size: 0.7em; /* 根据需要调整 */
       text-align: left; /* 居中显示 */
       display: block;
     }
