--- a/it-resume.html
+++ b/it-resume.html
@@ -222,7 +222,7 @@
         <div>
           <a class='slide'>
             <!-- 点击文字展开菜单 -->
-            <span id="language-button" class='element' style="cursor:pointer;">It<span style="color:transparent;">▾</span></span>
+            <span id="language-button" class='element' style="cursor:pointer;">It&nbsp;&nbsp;<span style="color:transparent;">▾</span></span>
     
             <!-- 下拉菜单 -->
             <div id="language-menu" class="language-menu hidden">
