--- a/fr-activities.html
+++ b/fr-activities.html
@@ -266,7 +266,7 @@
     <div>
       <a class='slide'>
         <!-- 点击文字展开菜单 -->
-        <span id="language-button" class='element' style="cursor:pointer;">Fr<span style="color:transparent;">▾</span></span>
+        <span id="language-button" class='element' style="cursor:pointer;">Fr&nbsp;&nbsp;<span style="color:transparent;">▾</span></span>
 
         <!-- 下拉菜单 -->
         <div id="language-menu" class="language-menu hidden">
