--- a/cn.html
+++ b/cn.html
@@ -34,9 +34,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
 
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+  <!-- 设备优化器 - 优先加载 -->
+  <script src="js/device-optimizer.js"></script>
 
     <!-- Favicons
   ================================================== -->
