--- a/cn-resume.html
+++ b/cn-resume.html
@@ -37,10 +37,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-
+ <!-- 设备优化器 - 优先加载 -->
+ <script src="js/device-optimizer.js"></script>
   <!-- Favicons
   ================================================== -->
   <link rel="shortcut icon" href="">
