--- a/ru.html
+++ b/ru.html
@@ -34,9 +34,8 @@
   <!-- 设备优化器 - 优先加载 -->
   <!-- <script src="js/device-optimizer.js"></script> -->
   
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+  <!-- 设备优化器 - 优先加载 -->
+  <script src="js/device-optimizer.js"></script>
   <script src="js/language_ru.js"></script>
   <!-- Favicons
   ================================================== -->
