--- a/cn.html
+++ b/cn.html
@@ -659,28 +659,16 @@
           </p> -->
 
         <p class="display-mobile" style="text-align:left;">
-          <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
-              id="tz24-1658714807-c1268-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="timezone - Zurich" target="_blank" rel="nofollow">德国时间</a></strong>
-          <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+          <strong><a href="//24timezones.com/Munich/time" style="text-decoration: none">德国时间</a> - <span class="digitalTime" timezone="Europe/Paris" locale="en-US" hour-format="12"></span></strong>
           <span style="float:right;">
-            <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
-                id="tz24-1658714942-c133-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-                title="Time - Beijing" target="_blank" rel="nofollow">中国时间</a></strong>
-            <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+            <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none">中国时间</a> - <span class="digitalTime" timezone="Asia/Shanghai" locale="en-US" hour-format="12"></span></strong>
           </span>
         </p>
 
         <p class="hidden-mobile" style="text-align:left;">
-          <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
-              id="tz24-1658678414-c1268-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-              title="World Clock :: Zurich" target="_blank" rel="nofollow">德国时间 [CET] </a></strong>
-          <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+          <strong><a href="//24timezones.com/Munich/time" style="text-decoration: none">德国时间 [CET] </a> - <span class="digitalTime" timezone="Europe/Paris" locale="en-US" hour-format="12"></span></strong>
           <span style="float:right;">
-            <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
-                id="tz24-1658678453-c133-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-                title="actual time Beijing" target="_blank" rel="nofollow">中国时间 [CST] </a></strong>
-            <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+            <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" >中国时间 [CST] </a> - <span class="digitalTime" timezone="Asia/Shanghai" locale="en-US" hour-format="12"></span></strong>
           </span>
         </p>
       </div>
@@ -863,36 +851,38 @@
 
         <div class="flex-container">
           <div id="date-display"></div>
-          <div><a href="//24timezones.com/San-Francisco/time" style="text-decoration: none;color:#f35212"
-              class="clock24"
-              id="tz24-1705207058-c1224-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="Clock - San Francisco" target="_blank" rel="nofollow">温哥华</a></div>
+          <div>
+            <a href="//24timezones.com/Vancouver/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">温哥华</a> - 
+            <span class="digitalTime" timezone="America/Vancouver" locale="en-US" hour-format="24"></span>
+          </div>
+
+          <div>
+            <a href="//24timezones.com/%E7%B4%90%E7%B4%84%E5%B8%82/%E6%97%B6%E9%97%B4"
+              style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">纽约</a> - 
+            <span class="digitalTime" timezone="America/New_York" locale="en-US" hour-format="24"></span>
+          </div>
+
+          <div>
+            <a href="//24timezones.com/London/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">伦敦</a> - 
+            <span class="digitalTime" timezone="Europe/London" locale="en-US" hour-format="24"></span>
+          </div>
+
+          <div>
+            <a href="//24timezones.com/Paris/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">巴黎</a> - 
+            <span class="digitalTime" timezone="Europe/Paris" locale="en-US" hour-format="24"></span>
+          </div>
 
 
-          <div><a href="//24timezones.com/%E7%B4%90%E7%B4%84%E5%B8%82/%E6%97%B6%E9%97%B4"
-              style="text-decoration: none;color:#f35212" class="clock24"
-              id="tz24-1705206204-c1179-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6InpoIn0="
-              title="時間 紐約市" target="_blank" rel="nofollow">纽约</a></div>
+          <div>
+            <a href="//24timezones.com/Moscow/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">莫斯科</a> - 
+            <span class="digitalTime" timezone="Europe/Moscow" locale="en-US" hour-format="24"></span>
+          </div>
 
 
-          <div><a href="//24timezones.com/London/time" style="text-decoration: none;color:#f35212" class="clock24"
-              id="tz24-1705206827-c1136-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="time in London" target="_blank" rel="nofollow">伦敦</a></div>
-
-          <div><a href="//24timezones.com/Paris/time" style="text-decoration: none;color:#f35212" class="clock24"
-              id="tz24-1705206628-c1195-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="Paris current time" target="_blank" rel="nofollow">巴黎</a></div>
-
-
-          <div><a href="//24timezones.com/Moscow/time" style="text-decoration: none;color:#f35212" class="clock24"
-              id="tz24-1705207393-c1166-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="current time in Moscow" target="_blank" rel="nofollow">莫斯科</a></div>
-
-
-          <div><a href="//24timezones.com/Beijing/time" style="text-decoration: none;color:#f35212" class="clock24"
-              id="tz24-1705206677-c133-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="Beijing time now" target="_blank" rel="nofollow">北京</a></div>
-          <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+          <div>
+            <a href="//24timezones.com/Beijing/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">北京</a> - 
+            <span class="digitalTime" timezone="Asia/Shanghai" locale="en-US" hour-format="24"></span>
+          </div>
 
         </div>
 
