--- a/jp.html
+++ b/jp.html
@@ -825,41 +825,41 @@
     <footer class="eleven center-column">
       <!--<img src="images/logoline.png" width="80%" />-->
       <div class="flex-container hidden-mobile">
-        <div id="date-display" class="hidden-mobile"></div>
-        <div class="hidden-mobile"><a href="//24timezones.com/San-Francisco/time"
-            style="text-decoration: none;color:#f35212" class="clock24"
-            id="tz24-1705207058-c1224-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="Clock - San Francisco" target="_blank" rel="nofollow">バンクーバー</a></div>
+        <div id="date-display"></div>
+        <div>
+          <a href="//24timezones.com/Vancouver/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">バンクーバー</a> - 
+          <span class="digitalTime" timezone="America/Vancouver" locale="en-US" hour-format="24"></span>
+        </div>
+
+        <div>
+          <a href="//24timezones.com/%E7%B4%90%E7%B4%84%E5%B8%82/%E6%97%B6%E9%97%B4"
+            style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">ニューヨーク</a> - 
+          <span class="digitalTime" timezone="America/New_York" locale="en-US" hour-format="24"></span>
+        </div>
+
+        <div>
+          <a href="//24timezones.com/London/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">ロンドン</a> - 
+          <span class="digitalTime" timezone="Europe/London" locale="en-US" hour-format="24"></span>
+        </div>
+
+        <div>
+          <a href="//24timezones.com/Paris/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">パリ</a> - 
+          <span class="digitalTime" timezone="Europe/Paris" locale="en-US" hour-format="24"></span>
+        </div>
 
 
-        <div class="hidden-mobile"><a href="//24timezones.com/%E7%B4%90%E7%B4%84%E5%B8%82/%E6%97%B6%E9%97%B4"
-            style="text-decoration: none;color:#f35212" class="clock24"
-            id="tz24-1705206204-c1179-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6InpoIn0="
-            title="時間 紐約市" target="_blank" rel="nofollow">ニューヨーク</a></div>
+
+        <div>
+          <a href="//24timezones.com/Beijing/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">北京</a> - 
+          <span class="digitalTime" timezone="Asia/Shanghai" locale="en-US" hour-format="24"></span>
+        </div>
 
 
-        <div class="hidden-mobile"><a href="//24timezones.com/London/time" style="text-decoration: none;color:#f35212"
-            class="clock24"
-            id="tz24-1705206827-c1136-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="time in London" target="_blank" rel="nofollow">ロンドン</a></div>
+        <div>
+          <a href="//24timezones.com/Tokyo/time" style="text-decoration: none;color:#f35212" target="_blank" rel="nofollow">東京</a> - 
+          <span class="digitalTime" timezone="Asia/Tokyo" locale="en-US" hour-format="24"></span>
+        </div>
 
-        <div class="hidden-mobile"><a href="//24timezones.com/Paris/time" style="text-decoration: none;color:#f35212"
-            class="clock24"
-            id="tz24-1705206628-c1195-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="Paris current time" target="_blank" rel="nofollow">パリ</a></div>
-
-
-        <div class="hidden-mobile"><a href="//24timezones.com/Moscow/time" style="text-decoration: none;color:#f35212"
-            class="clock24"
-            id="tz24-1705207393-c1166-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="current time in Moscow" target="_blank" rel="nofollow">モスクワ</a></div>
-
-
-        <div class="hidden-mobile"><a href="//24timezones.com/Beijing/time" style="text-decoration: none;color:#f35212"
-            class="clock24"
-            id="tz24-1705206677-c133-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="Beijing time now" target="_blank" rel="nofollow">北京</a></div>
-        <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
       </div>
 
       <hr class="large" />
