--- a/cn.html
+++ b/cn.html
@@ -508,7 +508,7 @@
             <!--<h3 class="hidden-mobile"><ruby>简<rt><text style="color:rgb(255, 255, 255)">かん</text></rt></ruby> <ruby>介<rt><text style="color:rgb(255, 255, 255)">かい</text> </rt></ruby>-->
             <h3 class="hidden-mobile">
               <span>
-                <ruby>嗨，你好!<rt><text style="color:rgb(255, 255, 255)">Hi Ni Hao</text></rt></ruby> <ruby>
+                <ruby>嗨，<span class="morning-night-greeting">你好!</span><rt><text style="color:rgb(255, 255, 255)">Hi Ni Hao</text></rt></ruby> <ruby>
                   <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
                 </ruby><small><small><small>欢迎来自<span class="geo-location">地球</span>的朋友 :-)</small></small> </small>
               </span>
