--- a/fr.html
+++ b/fr.html
@@ -450,7 +450,7 @@
       <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 6px;"></p>
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Bonjour! Salut! <small><small><small> Bienvenue aux amis <span id="location">du
+      <h3 class="hidden-mobile"><span class="morning-night-greeting">Bonjour! </span><small><small><small> Bienvenue aux amis <span id="location">du
                 monde</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana">
