--- a/es.html
+++ b/es.html
@@ -477,7 +477,7 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">¡Hola y bienvenidos! <small><small> <small>Amigos de <span id="location">mundo</span>
+      <h3 class="hidden-mobile"><span class="morning-night-greeting">¡Hola!</span><small><small> <small>Amigos de <span id="location">mundo</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana">
           <img src="./images/wflags_svg/es.svg" alt="flag"
