--- a/it.html
+++ b/it.html
@@ -487,7 +487,7 @@
 
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">Buongiorno! Saluti! <small><small> <small>Benvenuti amici <span id="location">dal
+      <h3 class="hidden-mobile"><span class="morning-night-greeting">Buongiorno! </span> <small><small> <small>Benvenuti amici <span id="location">dal
                 mondo</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana">
