--- a/jp.html
+++ b/jp.html
@@ -510,7 +510,7 @@
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">
         <span>
-          <ruby>こんにちは！<rt><text style="color:rgb(255, 255, 255)">Kon‘ ni chi wa</text></rt></ruby> <ruby>
+          <ruby><span class="morning-night-greeting">こんにちは！</span><rt><text style="color:rgb(255, 255, 255)">Kon‘ ni chi wa</text></rt></ruby> <ruby>
             <rt><text style="color:rgb(255, 255, 255)"></text> </rt>
           </ruby><small><small><small><span class="geo-location">地球</span>
             からの友人を歓迎します:-)</small></small> </small>
